# AddExtLib

./: CMakeLists.txt  README.md  README.ru.md
cmake/: AddExtLibs.cmake
examples/cereal/: CMakeLists.txt
examples/fmt/: CMakeLists.txt  main.cpp
examples/imgui/: CMakeLists.txt
examples/lua/: CMakeLists.txt
examples/magic_enum/: CMakeLists.txt
examples/nlohmann_json/: CMakeLists.txt  main.cpp
src/: main.cpp
